--- a/supertux.desktop
+++ b/supertux.desktop
@@ -4,7 +4,7 @@ Comment=Game similar to the original game Super Mario Bros
 Comment[pl]=Gra podobna do oryginalnej gry Super Mario Bros
 Exec=supertux
 Terminal=false
-Icon=supertux.png
+Icon=supertux.xpm
 Type=Application
 Encoding=UTF-8
 Categories=Application;Game;ArcadeGame;
