--- a/supertux.desktop
+++ b/supertux.desktop
@@ -7,5 +7,5 @@ Terminal=false
 Icon=supertux.xpm
 Type=Application
 Encoding=UTF-8
-Categories=Application;Game;ArcadeGame;
+Categories=Game;ArcadeGame;
 # vi: encoding=utf-8
