- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    supertux.desktop -> 1.5

--- a/supertux.desktop
+++ b/supertux.desktop
@@ -4,8 +4,7 @@ Comment=Game similar to the original game Super Mario Bros
 Comment[pl]=Gra podobna do oryginalnej gry Super Mario Bros
 Exec=supertux
 Terminal=false
-Icon=supertux.xpm
+Icon=supertux
 Type=Application
-Encoding=UTF-8
 Categories=Game;ArcadeGame;
 # vi: encoding=utf-8
